frontend_brand_admin.log

> movies@0.1.0 start
> react-scripts start

Starting the development server...

Compiled successfully!

You can now view movies in the browser.

  Local:            http://localhost:3000
  On Your Network:  http://192.168.56.1:3000

Note that the development build is not optimized.
To create a production build, use npm run build.

webpack compiled [1m[32msuccessfully[39m[22m
Compiling...
Compiled successfully!
webpack compiled [1m[32msuccessfully[39m[22m
Compiling...
Compiled successfully!
webpack compiled [1m[32msuccessfully[39m[22m
Compiling...
Failed to compile.

[eslint] 
src\pages\admin\Products.jsx
Syntax error: Expected corresponding JSX closing tag for <Link>. (917:24) (917:24)
[1m[31mERROR[39m[22m in [1m./src/pages/admin/Products.jsx[39m[22m
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\src\pages\admin\Products.jsx: Expected corresponding JSX closing tag for <Link>. (917:24)

[0m [90m 915 |[39m                             {ui[33m.[39m[36mdelete[39m}
 [90m 916 |[39m                           [33m<[39m[33m/[39m[33mbutton[39m[33m>[39m
[31m[1m>[22m[39m[90m 917 |[39m                         [33m<[39m[33m/[39m[33mdiv[39m[33m>[39m
 [90m     |[39m                         [31m[1m^[22m[39m
 [90m 918 |[39m                       [33m<[39m[33m/[39m[33mtd[39m[33m>[39m
 [90m 919 |[39m                     [33m<[39m[33m/[39m[33mtr[39m[33m>[39m
 [90m 920 |[39m                   )[33m;[39m[0m
    at constructor (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:365:19)
    at FlowParserMixin.raise (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:6599:19)
    at FlowParserMixin.jsxParseElementAt (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:4727:16)
    at FlowParserMixin.jsxParseElementAt (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:4698:32)
    at FlowParserMixin.jsxParseElementAt (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:4698:32)
    at FlowParserMixin.jsxParseElementAt (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:4698:32)
    at FlowParserMixin.jsxParseElement (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:4749:17)
    at FlowParserMixin.parseExprAtom (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:4759:19)
    at FlowParserMixin.parseExprSubscripts (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:11081:23)
    at FlowParserMixin.parseUpdate (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:11066:21)
    at FlowParserMixin.parseMaybeUnary (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:11046:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:10899:61)
    at FlowParserMixin.parseExprOps (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:10904:23)
    at FlowParserMixin.parseMaybeConditional (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:10881:23)
    at FlowParserMixin.parseMaybeAssign (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:10831:21)
    at c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:3498:39
    at FlowParserMixin.tryParse (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:6907:20)
    at FlowParserMixin.parseMaybeAssign (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:3498:18)
    at c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:10800:39
    at FlowParserMixin.allowInAnd (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:12426:12)
    at FlowParserMixin.parseMaybeAssignAllowIn (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:10800:17)
    at FlowParserMixin.parseMaybeAssignAllowInOrVoidPattern (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:12493:17)
    at FlowParserMixin.parseParenAndDistinguishExpression (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:11675:28)
    at FlowParserMixin.parseParenAndDistinguishExpression (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:3591:18)
    at FlowParserMixin.parseExprAtom (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:11331:23)
    at FlowParserMixin.parseExprAtom (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:4764:20)
    at FlowParserMixin.parseExprSubscripts (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:11081:23)
    at FlowParserMixin.parseUpdate (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:11066:21)
    at FlowParserMixin.parseMaybeUnary (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:11046:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:10899:61)
    at FlowParserMixin.parseExprOps (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:10904:23)
    at FlowParserMixin.parseMaybeConditional (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:10881:23)
    at FlowParserMixin.parseMaybeAssign (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:10831:21)
    at FlowParserMixin.parseMaybeAssign (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:3549:18)
    at FlowParserMixin.parseExpressionBase (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:10784:23)
    at c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:10780:39
    at FlowParserMixin.allowInAnd (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:12421:16)
    at FlowParserMixin.parseExpression (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:10780:17)
    at FlowParserMixin.parseReturnStatement (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:13142:28)
    at FlowParserMixin.parseStatementContent (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:12798:21)
    at FlowParserMixin.parseStatementLike (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:12767:17)
    at FlowParserMixin.parseStatementLike (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:2918:24)
    at FlowParserMixin.parseStatementListItem (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:12747:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:13316:61)
    at FlowParserMixin.parseBlockBody (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:13309:10)
    at FlowParserMixin.parseBlock (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:13297:10)
    at FlowParserMixin.parseFunctionBody (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:12100:24)
    at c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:2892:63
    at FlowParserMixin.forwardNoArrowParamsConversionAt (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:3068:16)
    at FlowParserMixin.parseFunctionBody (c:\Users\khaoula ait mbark\Desktop\sc\Ecommerce_Peinture\node_modules\@babel\parser\lib\index.js:2892:12)

[1m[31mERROR[39m[22m in [1m[eslint] 
src\pages\admin\Products.jsx
  Line 917:24:  Parsing [1m[31merror[39m[22m[1m: Expected corresponding JSX closing tag for <Link>. (917:24)

[39m[22m

webpack compiled with [1m[31m2 errors[39m[22m
Compiling...
Compiled successfully!
webpack compiled [1m[32msuccessfully[39m[22m
